fixed issue with cramped table

--- a/src/app/components/times-costs/times-costs.component.css
+++ b/src/app/components/times-costs/times-costs.component.css
@@ -74,7 +74,7 @@ table.timetable tr ul li {
     padding: 5px;
 }
 
-@media ( max-width: 895px) {
+@media (max-width: 895px) {
     table.timetable th {
         font-size: 0.6em;
     }
@@ -83,11 +83,17 @@ table.timetable tr ul li {
     }
 }
 
-@media ( max-width: 790px) {
+@media (max-width: 790px) {
     table.timetable td {
         font-size: 0.65em;
     }
     th {
         font-size: 1em;
+    }
+}
+
+@media (max-width: 600px) {
+    table {
+        width: 100%;
     }
 }
